# django-mimetype-validator

./: .gitignore  LICENSE  README.md  pyproject.toml  run  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yaml
src/django_mimetype_validator/: __init__.py
tests/: conftest.py  settings.py  test_mimetype_validator.py
